--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -6,6 +6,7 @@
         <div id="root">Загрузка...</div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js"></script>
-        <script src="/static/js/app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+        <script type="text/babel" src="/static/js/app.js"></script>
     </body>
 </html>
