--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>ReactJS</title>
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
         <div id="root">Загрузка...</div>
